Added Database Tables and Migrations.End Implement Database Section

--- a/LeaveManagement.Web/appsettings.json
+++ b/LeaveManagement.Web/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-LeaveManagement.Web-3b16177d-bdb7-4b18-9ab1-695cd740c0f9;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=.;Database=LeaveManagementNET6;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
